# north

./: .gitignore  CMakeLists.txt  README.md  main.fs
includes/: assembly.h  system.h
src/: main.cpp
tests/: 01-arithmetics.nt  01-fundamentals.nt  01-output.txt  02-output.txt  02-stack-operations.nt  03-conditions.nt  03-output.txt  04-loops.nt  04-output.txt  05-memory.nt  05-output.txt  expected.txt  output.txt
